# rjmcmcmt

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  README.md  cmake_build_script_ubuntu.sh
docs/: README.md
examples/CoompanaProvince/: generate_pmap_plots.bat  generate_pmap_plots.py  rjmcmcmt.bat  rjmcmcmt.con  rjmcmcmt.sh
examples/SouthernThomson/: generate_pmap_plots.sh  rjmcmcmt.bat  rjmcmcmt.con  rjmcmcmt.sh
examples/Synthetic/: rjmcmcmt.bat  rjmcmcmt.con  rjmcmcmt.sh
examples/Synthetic/edifiles/: Synthetic.edi  Synthetic.txt  Synthetic_Model_1_no-noise.edi  Synthetic_Model_1_no-noise.txt  Synthetic_Model_1_noise.edi  Synthetic_Model_2_noise.edi  generate_synthetic_data.bat
examples/eucla/: generate_plots.bat  rjmcmcmt.bat  rjmcmcmt.con  rjmcmcmt.sh
examples/eucla/edifiles/: AB_CD1_2.edi  AB_DEN1.edi  AB_GW1.edi  AB_HUG1.edi  AB_KN1_2.edi  A_AK2.edi  A_DEN1.edi  A_HUG1.edi  B_DEN1.edi
examples/generate_synthetic_data/: Synthetic_Model_2.txt  generate_synthetic_data.bat  generate_synthetic_data.sh  synthetic_model_1.txt  synthetic_model_1_no-noise.edi  synthetic_model_1_noise.edi
makefiles/: README.md  generate_synthetic_data.make  raijin_install.sh  rjmcmcmt.make  run_make.sh  run_make_ubuntu-win10.sh  run_make_vm.sh
matlab/: view_results.m
python/: PlotMcmcResults.py  PlotResults.py  Plot_results_script.py
src/: generate_synthetic_data.cpp  mt.h  resistivity_model.h  rjmcmcmt.cpp
submodules/: README.md
visualstudio/generate_synthetic_data/: generate_synthetic_data.sln  generate_synthetic_data.vcxproj  generate_synthetic_data.vcxproj.filters
visualstudio/propertysheets/: iearth-rjmcmc.props  mpich2.x64.props  msmpi.x64.props  rjmcmcmt.props
visualstudio/rjmcmcmt/: rjmcmcmt.sln  rjmcmcmt.vcxproj  rjmcmcmt.vcxproj.filters
